translated some destination

--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -13,5 +13,15 @@
     "space": "宇宙へ",
     "text": "本気と言うと、宇宙に行くなら、地球の近くにいたらつまらなくて、他の星とか遠い場所とか深いの宇宙に行く方が面白いですね。では、私たちと一緒にこの世のものとは思えないほど冒険に出かけましょう。",
     "explore": "探検"
+  },
+  "destination": {
+    "pick": "目的地を選びましょう",
+    "moon": "月",
+    "moonDescription": "地球にいると、このように我々の惑星を見ることはずないですね。こう言うの旅リラクシングだろう。帰る時、もっとさっぱりはずよ。もう月にいたら、ルナ2とアポロ〜11の着陸地点を見て、ちょっと歴史を習おう。",
+    "moonDistance": "38.44万 km",
+    "moonTravel": "3日間",
+    "mars": "火星",
+    "europa": "エウロパ",
+    "titan": "タイタン"
   }
 }
