--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -18,10 +18,21 @@
     "pick": "目的地を選びましょう",
     "moon": "月",
     "moonDescription": "地球にいると、このように我々の惑星を見ることはずないですね。こう言うの旅リラクシングだろう。帰る時、もっとさっぱりはずよ。もう月にいたら、ルナ2とアポロ〜11の着陸地点を見て、ちょっと歴史を習おう。",
-    "moonDistance": "38.44万 km",
+    "moonDistance": "38.44万 キロ",
     "moonTravel": "3日間",
     "mars": "火星",
+    "marsDescription": "ハイキングブーツを忘れないでね。太陽系で最も高い山のオリンポス・モンスを登るのに必要ですよ。地球のエバレスと比べると2.5倍も大きいんです。",
+    "marsDistance": "2.25億 キロ",
+    "marsTravel": "9ヶ月",
     "europa": "エウロパ",
-    "titan": "タイタン"
+    "europaDescription": "木星の周りを周回する4つのガリレオ衛星の中で最も小さいエウロパは、冬の愛好家の夢です。氷の表面を持つため、アイススケート、カーリング、ホッケー、または暖かい冬のキャビンでの簡単なリラックスに最適です。",
+    "europaDistance": "6.28億 キロ",
+    "europaTravel": "3年間",
+    "titan": "タイタン",
+    "titanDescription": "地球以外で密度の濃い大気を持つ唯一の衛星であるタイタンは、第二の家みたいです（ただ数百度寒いだけで！）。ボーナスとして、土星の輪の見事な景色を楽しむことができます。",
+    "titanDistance": "16億 キロ",
+    "titanTravel": "7年間",
+    "distance": "距離",
+    "travel": "移動時間"
   }
 }
